# evm

./: .gitignore  README.md
lab1/: README.md  lab1.c  lab1_Novikov.doc  Отчёт.doc
lab2/: .~lock.Отчёт.doc#  0  README.md  Отчёт.doc
lab2/assembler/: lab2_O0.s  lab2_O1.s  lab2_O3.s  lab2_Os.s
lab2/test/: results.txt  test.sh
lab3/: convert_to_double.c  lab3.c  lab3_Novikov_22208.docx  test.sh
lab3/assembler/: lab3_32_O0.s  lab3_32_O1.s  lab3_32_O2.s  lab3_32_Ofast.s  lab3_32_Og.s  lab3_32_Os.s  lab3_64_O0.s  lab3_64_O1.s  lab3_64_O2.s  lab3_64_Ofast.s  lab3_64_Og.s  lab3_64_Os.s
lab4/: Lab4_Novikov_22208.docx
lab5/: CMakeLists.txt  lab5_Novikov.docx  main.cpp
lab6/: Lab6_Novikov.docx  executable  main.cpp
lab8/: .~lock.графики.ods#  a.out  lab8_Novikov_22208.docx  main.cpp  графики.ods
lab9/: a.out  lab9_Novikov_22208.docx  main.cpp  графики.csv  графики.ods
